Feature #2361 - SAF-based-solution to access the external SD card: modify the Download Service

--- a/res/layout/activity_choose_account.xml
+++ b/res/layout/activity_choose_account.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/standard_margin"
-                android:src="@drawable/ic_pro_lite"
+                android:src="@drawable/free_ic"
                 />
             <TextView
                 android:id="@+id/free_title"
