--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -196,5 +196,13 @@
 	    android:showAsAction="never"
 	    android:title="@string/action_cancel_subscriptions"
 	    android:icon="@drawable/ic_action_bar_null"
-	    MEGA:showAsAction="never" />		
+	    MEGA:showAsAction="never" />	
+	    
+	<item
+	    android:id="@+id/action_menu_kill_all_sessions"
+	    android:orderInCategory="160"
+	    android:showAsAction="never"
+	    android:title="@string/action_kill_all_sessions"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />	
 </menu>
