--- a/res/layout/item_contact_outg_request_list.xml
+++ b/res/layout/item_contact_outg_request_list.xml
@@ -98,7 +98,7 @@
 		            android:id="@+id/contact_list_option_reinvite"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_delete"
+		            android:src="@drawable/reinvite_ic"
 		           style="@style/dialogActionButton"
 		            android:layout_centerHorizontal="true"
 		            android:layout_alignParentTop="true"
