--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,5 +4,14 @@
     <dimen name="standard_margin_double">20dp</dimen>
     <dimen name="standard_margin_half">5dp</dimen>
     <dimen name="thumb_size">60dp</dimen>
-    <dimen name="tab_host_default_height">48dp</dimen>
+    <dimen name="tab_host_default_height">48dp</dimen>    
+        
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="fab_button_diameter">56dp</dimen>
+    <dimen name="fab_button_margin_bottom">16dp</dimen>
+    <dimen name="fab_button_margin_right">16dp</dimen>
+    <dimen name="elevation_low">1dp</dimen>
+    <dimen name="elevation_high">8dp</dimen>
 </resources>
