--- a/res/layout-v21/fragment_filebrowserlist.xml
+++ b/res/layout-v21/fragment_filebrowserlist.xml
@@ -149,14 +149,13 @@
      </LinearLayout>        
       
 		 
-	 <ListView
+	<android.support.v7.widget.RecyclerView
         android:id="@+id/file_list_view_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:choiceMode="multipleChoice"
         android:layout_below="@id/content_text"
-        android:layout_above="@id/buttons_layout">
-    </ListView>
+        android:layout_above="@id/buttons_layout"/>
     
 	<ImageButton
         android:id="@+id/file_upload_button"
@@ -197,5 +196,380 @@
        	android:visibility="gone"
        	android:layout_below="@id/buttons_layout">
     </Button>   
+    
+     <nz.mega.components.SlidingUpPanelLayout
+        xmlns:sothree="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/sliding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        sothree:umanoPanelHeight="100dp"
+        sothree:umanoShadowHeight="4dp"
+        sothree:umanoParalaxOffset="100dp"
+        sothree:umanoDragView="@+id/dragView"
+        sothree:umanoOverlay="true">
+
+        <!-- MAIN CONTENT -->
+        
+        <FrameLayout
+            android:id="@+id/file_list_out_options"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:orientation="vertical">
+            
+            <TextView
+                android:id="@+id/main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:gravity="center"                
+                android:focusable="false"
+                android:focusableInTouchMode="true"/>
+        </FrameLayout>
+        
+       
+        <!-- SLIDING LAYOUT -->
+		 <LinearLayout 
+            android:id="@+id/file_list_options"
+            android:layout_width="match_parent"
+        	android:layout_height="wrap_content"
+        	android:padding="0dp"
+        	android:background="@color/adapters_background"
+        	android:orientation="vertical">
+        	
+            <LinearLayout
+                android:id="@+id/file_list_option_download_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                
+                <ImageView
+		            android:id="@+id/file_list_option_download"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_download"
+		            style="@style/dialogActionButton"	           
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+                
+                <TextView 
+                    android:id="@+id/file_list_option_download_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/general_download"                    
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"					
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+            </LinearLayout>
+        	
+           
+			<LinearLayout
+                android:id="@+id/file_list_option_properties_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+               	android:orientation="horizontal"
+               	android:gravity="center_vertical">
+		        
+		        <ImageView
+		            android:id="@+id/file_list_option_properties"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/info_ic"		            
+		            style="@style/dialogActionButton"           
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		        
+		        <TextView 
+                    android:id="@+id/file_list_option_properties_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+	        </LinearLayout>    
+		    
+			<LinearLayout
+                android:id="@+id/file_list_option_public_link_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+				
+				<ImageView
+		            android:id="@+id/file_list_option_public_link"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/link_ic"
+		            style="@style/dialogActionButton"          
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+				
+				<TextView 
+                    android:id="@+id/file_list_option_public_link_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_get_link_menu"      
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+		    </LinearLayout>
+		    
+			<LinearLayout
+                android:id="@+id/file_list_option_leave_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		         
+		        <ImageView
+		            android:id="@+id/file_list_option_leave_share"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/leave_share_ic"
+		            style="@style/dialogActionButton"	           
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>		
+		        
+				<TextView 
+                    android:id="@+id/file_list_option_leave_share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_leave_menu"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>	               
+		      </LinearLayout>  
+		         
+		   <LinearLayout
+                android:id="@+id/file_list_option_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical" >
+		          
+		        <ImageView
+		            android:id="@+id/file_list_option_share"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_share"
+		            style="@style/dialogActionButton"	           
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		        
+		        <TextView 
+                    android:id="@+id/file_list_option_share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_share_folder"     
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>	               
+		      </LinearLayout>  
+		     
+		    <LinearLayout
+                android:id="@+id/file_list_option_permissions_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical" >
+		           
+		         <ImageView
+		            android:id="@+id/file_list_option_permissions"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/permissions_ic"
+		            style="@style/dialogActionButton"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         
+		          <TextView 
+                    android:id="@+id/file_list_option_permissions_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/file_properties_shared_folder_select_contact"
+                     android:paddingBottom="10dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>	
+		           
+		     </LinearLayout>
+		    
+		    <LinearLayout
+                android:id="@+id/file_list_option_clear_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		           	
+		         <ImageView
+		            android:id="@+id/file_list_option_clear_share"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_clear_shares"
+		            style="@style/dialogActionButton"
+		           android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         <TextView 
+                    android:id="@+id/file_list_option_clear_share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_clean_shares_menu"
+                    android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>	               
+		      </LinearLayout>  
+
+		      <LinearLayout
+                android:id="@+id/file_list_option_delete_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_delete"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_rubbish_bin"
+		            style="@style/dialogActionButton"
+		             android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_delete_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/section_rubbish_bin"
+                     android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+		      </LinearLayout>
+		         
+		    <LinearLayout
+                android:id="@+id/file_list_option_rename_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_rename"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_rename"
+		            style="@style/dialogActionButton"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         
+		          <TextView 
+                    android:id="@+id/file_list_option_rename_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_rename"
+                    android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>	    
+		           
+		    </LinearLayout>          
+	    
+		    <LinearLayout
+                android:id="@+id/file_list_option_move_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_move"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_move"
+		            style="@style/dialogActionButton"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_move_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/general_move_to"
+                     android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+		      </LinearLayout>
+		   
+		    
+		    <LinearLayout
+                android:id="@+id/file_list_option_copy_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_copy"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_menu_copy"
+		            style="@style/dialogActionButton"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_copy_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_copy"
+                    android:gravity="center_vertical"
+                     android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+		      </LinearLayout>		    
+
+		    <LinearLayout
+                android:id="@+id/file_list_option_remove_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_remove"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_delete"
+		            style="@style/dialogActionButton"
+		            android:paddingTop="2dp"
+		            android:paddingBottom="2dp"/>
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_remove_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_delete"
+                     android:paddingBottom="2dp"
+					android:textColor="#ffffff"
+					android:textSize="14sp"
+					android:textStyle="bold"/>
+		      </LinearLayout>  
+        </LinearLayout>
+    </nz.mega.components.SlidingUpPanelLayout>
 
 </RelativeLayout>
