--- a/res/layout-v21/fragment_fileexplorerlist.xml
+++ b/res/layout-v21/fragment_fileexplorerlist.xml
@@ -67,13 +67,7 @@
             android:text="@string/my_account_upgrade_pro" />
      </LinearLayout>          
 		 
-	 <android.support.v7.widget.RecyclerView
-        android:id="@+id/file_list_view_browser"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:choiceMode="multipleChoice"
-        android:layout_below="@id/content_text"
-        android:layout_above="@id/buttons_layout"/>
+
 
 <!-- 
       <Button
@@ -101,7 +95,7 @@
        	android:layout_below="@id/buttons_layout">
     </Button>   
     
-     --> 
+     
  
     
       <Button
@@ -116,6 +110,52 @@
         android:text="+"
         android:tint="@android:color/white"
         android:elevation="@dimen/elevation_low"
-        android:stateListAnimator="@anim/button_elevation"/>
+        android:stateListAnimator="@anim/button_elevation"/>--> 
+       
+    <RelativeLayout
+         android:id="@+id/options_layout"
+    	 android:layout_width="fill_parent"
+    	 android:layout_height="48dp"
+    	 android:layout_alignParentBottom="true"
+    	 android:background="@color/background"
+    	 android:orientation="horizontal">
 
+        <TextView
+	    android:id="@+id/cancel_text"
+	    android:layout_width="wrap_content"
+	    android:layout_height="36dp"
+	    android:layout_centerVertical="true"
+	    android:layout_marginLeft="200dp"
+	    android:textColor="@color/accentColor"
+	    android:textStyle="bold"
+	    android:textSize="14sp"/>
+        
+        <TextView
+	    android:id="@+id/action_text"
+	    android:layout_width="wrap_content"
+	    android:layout_height="36dp"
+	    android:layout_centerVertical="true"
+	    android:paddingLeft="20dp"
+	    android:layout_toRightOf="@id/cancel_text"
+	    android:textColor="@color/accentColor"
+	    android:textStyle="bold"
+	    android:textSize="14sp"/> 
+         
+    </RelativeLayout>
+    
+    <View 
+     android:id="@+id/separator" 
+	 android:background="@color/text_secondary"
+	 android:layout_width = "fill_parent"
+	 android:layout_height="1dip"
+	 android:layout_above="@id/options_layout"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/file_list_view_browser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:choiceMode="multipleChoice"
+        android:layout_below="@id/content_text"
+        android:layout_above="@id/separator"/>
+    
 </RelativeLayout>
