Task #2550 - Multiselect in Cloud Drive

--- a/res/layout-v21/item_file_list.xml
+++ b/res/layout-v21/item_file_list.xml
@@ -2,6 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
+    android:background="@drawable/statelist_item_layout"
     android:id="@+id/file_list_item_layout" >
     
     <CheckBox
