Tasks #2590, #2591, #2592, #2593: - Revamping of IncomingSharesFragment to RecyclerView - Revamping of OutgoingSharesFragment to RecyclerView - Multiselect in IncomingSharesFragment - Multiselect in OutgoingSharesFragment

--- a/res/layout-v21/activity_manager.xml
+++ b/res/layout-v21/activity_manager.xml
@@ -62,7 +62,8 @@
            <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:background="@color/mega" >
        	   </TabWidget>
 
             <FrameLayout
@@ -94,7 +95,8 @@
            <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content" 
+            android:background="@color/mega">
        	   </TabWidget>
 
             <FrameLayout
