--- a/res/layout/activity_login_returning.xml
+++ b/res/layout/activity_login_returning.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_secondary"
-    tools:context=".LoginActivity" >
+    tools:context=".LoginActivityLollipop" >
 
 	<LinearLayout 
 	    android:layout_width="match_parent"
