--- a/res/layout/activity_tour.xml
+++ b/res/layout/activity_tour.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background_secondary"
-    tools:context=".LoginActivity" >
+    tools:context=".LoginActivityLollipop" >
 
 	<LinearLayout 
 	    android:layout_width="fill_parent"
