Task #2609 - SliddingPanel and MenuActionBar functionality of ContactsFragment

--- a/res/layout-v21/item_contact_list.xml
+++ b/res/layout-v21/item_contact_list.xml
@@ -1,210 +1,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/contact_list_item_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
-    android:id="@+id/contact_list_item_layout" >
+    android:descendantFocusability="blocksDescendants" >
 
     <RelativeLayout
-		android:id="@+id/contact_list_relative_layout_avatar"
-		android:layout_width="54dp"
-		android:layout_height="54dp"
-		android:layout_marginLeft="5dp" 
-		android:paddingTop="3dp"
-		android:layout_toRightOf="@id/contact_list_checkbox" >
-         
-	    <nz.mega.components.RoundedImageView 
-	         android:id="@+id/contact_list_thumbnail"
-	         android:layout_width="54dp"
-	         android:layout_height="54dp" 
-	         android:scaleType="fitCenter"         
-	         rounded:corner_radius="27dp" 
-	         rounded:border_width="0dp"
-	         rounded:border_color="@color/border_file_properties"/>
-	    
-	    <TextView
-	        android:id="@+id/contact_list_initial_letter"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:layout_centerInParent="true"
-		    android:gravity="center_horizontal|center_vertical" />
-	    
+        android:id="@+id/contact_list_relative_layout_avatar"
+        android:layout_width="54dp"
+        android:layout_height="54dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/contact_list_checkbox"
+        android:paddingTop="3dp" >
+
+        <nz.mega.components.RoundedImageView
+            android:id="@+id/contact_list_thumbnail"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:scaleType="fitCenter"
+            rounded:border_color="@color/border_file_properties"
+            rounded:border_width="0dp"
+            rounded:corner_radius="27dp" />
+
+        <TextView
+            android:id="@+id/contact_list_initial_letter"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal|center_vertical" />
     </RelativeLayout>
-        
+
     <TextView
         android:id="@+id/contact_list_name"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_toRightOf="@id/contact_list_relative_layout_avatar"
         android:paddingLeft="5dp"
-        android:paddingTop="7dp" />  
-    
+        android:paddingTop="7dp" />
+
     <TextView
         android:id="@+id/contact_list_content"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_toRightOf="@id/contact_list_relative_layout_avatar"
         android:layout_below="@id/contact_list_name"
-        android:paddingLeft="5dp"
+        android:layout_toRightOf="@id/contact_list_relative_layout_avatar"
         android:paddingBottom="7dp"
+        android:paddingLeft="5dp"
         android:textColor="@color/file_list_second_row" />
-    
-    <ImageButton 
+
+    <ImageButton
         android:id="@+id/contact_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
-		android:background="@null" 
-        android:layout_alignTop="@id/contact_list_name"
         android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
+        android:layout_alignTop="@id/contact_list_name"
+        android:background="@null"
         android:paddingLeft="5dp"
-        android:paddingRight="15dp" />
+        android:paddingRight="15dp"
+        android:paddingTop="12dp"
+        android:src="@drawable/action_selector_ic" />
 
-  
-    <!-- 
-    <LinearLayout
-        android:id="@+id/contact_list_options"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/contact_list_content"
-        android:orientation="horizontal"
-        android:padding="0dp"
-        android:background="@color/adapters_background">
-	    
-        <RelativeLayout
-                android:id="@+id/contact_list_option_remove_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-	        
-		        <ImageView
-		            android:id="@+id/contact_list_option_remove"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_delete"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-		        
-		      <TextView 
-                    android:id="@+id/contacts_list_option_remove_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_delete"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-		</RelativeLayout>
-               
-        <RelativeLayout
-                android:id="@+id/contact_list_option_properties_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-                
-	            <ImageView
-		            android:id="@+id/contact_list_option_properties"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/info_ic"
-		           style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-	            
-	            <TextView 
-                    android:id="@+id/contact_list_option_properties_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-                     android:text="@string/contact_properties_activity"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-	        </RelativeLayout>    
-	         
-        <RelativeLayout
-                android:id="@+id/contact_list_option_send_file_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-	        
-		        <ImageView
-		            android:id="@+id/contact_list_option_send_file"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/send_file_ic"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-		        
-		      <TextView 
-                    android:id="@+id/contacts_list_option_send_file_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_send_file"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-		  </RelativeLayout>
-        
-         <RelativeLayout
-                android:id="@+id/contact_list_option_share_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-	           
-             <ImageView
-		            android:id="@+id/contact_list_option_share"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-	            
-	        <TextView 
-                    android:id="@+id/contact_list_option_share_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_share_folder"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-		     </RelativeLayout>
-             
-		  <ImageButton
-		            android:id="@+id/contact_list_option_send"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/contact_list_option_send"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null"
-		            android:layout_gravity="center_vertical" /> 
-	        
-
-    </LinearLayout>
-    
-    
-    
-     -->
-    
-    
 </RelativeLayout>
-
